update to Java 17, add Alma XML, relax label value interpretation with # symbol